# AkuaEngine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Camera.h  CameraConfig.h  Camera_Defaults.h  Particle.h  SPH_Estimator.h  Shader.h  ShaderProgram.h  Smoothing_Kernel.h
include/AkuaEngine/Application/: Application.h  InputSystem.h
include/AkuaEngine/CUDA/: ConstraintSolverCUDA.h  IntegrationCUDA.h  MathUtilsCUDA.h  NeighbourSearchCUDA.h  SmoothingKernelsCUDA.h
include/AkuaEngine/Camera/: Camera.h  CameraConfig.h  CameraMovement.h
include/AkuaEngine/Graphics/: Material.h  Mesh.h
include/AkuaEngine/Interop/: InteropManager.h  InteropResource.h
include/AkuaEngine/Rendering/: MeshBufferGL.h  ParticlesBufferGL.h  Renderer.h
include/AkuaEngine/Scene/: Scene.h  SceneObject.h  SceneObjectType.h
include/AkuaEngine/Shader/: ShaderProgram.h
include/AkuaEngine/Simulation/: PBFConfig.h  PBFSolver.h  Particle.h  ParticleSystem.h
include/AquaForge/: PBFConfig.h
include/AquaForge/Application/: Application.h  InputSystem.h
include/AquaForge/CUDA/: ConstraintSolverCUDA.h  IntegrationCUDA.h  MathUtilsCUDA.h  NeighbourSearchCUDA.h  SmoothingKernelsCUDA.h
include/AquaForge/Camera/: Camera.h  CameraConfig.h  CameraMovement.h
include/AquaForge/Graphics/: Material.h  Mesh.h
include/AquaForge/Interop/: InteropManager.h  InteropResource.h
include/glad/: glad.h
src/: Camera.cpp  SPH_Estimator.cu  SPH_Estimator2.cu  Shader.cpp  glad.c  main.cpp  main2.cpp
src/Application/: Application.cpp  InputSystem.cpp
src/CUDA/: ConstraintSolverCUDA.cu  IntegrationCUDA.cu  NeighbourSearchCUDA.cu
src/Camera/: Camera.cpp
src/Graphics/: Material.cpp
src/Interop/: InteropManager.cpp  InteropResource.cpp
src/Rendering/: Renderer.cpp
src/Scene/: Scene.cpp  SceneObject.cpp
src/Shader/: ShaderProgram.cpp  fragShader.glsl  vertexShader.glsl
src/Simulation/: PBFSolver.cpp
src/shaders/: planeFragShader.glsl
(+11 files in other folders)
